@@ -3,7 +3,11 @@ x/xx/2011 - MythBox 1.0.5
   New
     - A thumbnail for which there is no associated recording is
       automatically deleted
+    - Added 'Refresh Fan Art' button to the Recording Details > Advanced menu
 
+  Fixed
+    - EPG was broken for Python 2.7
+    
 6/11/2011 - MythBox 1.0.4
 -----------------------------
   New
